Wed Jun  7 16:23:51 1995    <tytso@rsx-11.mit.edu>

	* Makefile.in: Process osconf.h using PREFIX and EXEC_PREFIX
		instead of KRB5ROOT.

	* k5-config.h: Remove old defines for krb.conf and krb.realms,
		which are now obsolete.

Mon Jun 5 13:47:30 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_proto.h - Add new arguments to krb5_adm_connect() for support
		of specifiable credentials caches and ticket lifetimes.


Thu Jun 1 14:28:40 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm.h: Change the default admin port to 464.

Tue May 30 17:33:09 1995 Keith Vetter (keithv@fusion.com)

	* adm_proto.h: removed INTERFACE from 2 non-exported functions.

Tue May 30 10:22:57 1995 Keith Vetter (keithv@fusion.com)

	* adm_proto.h: conditionally removed for Windows two prototypes
	   that use the database.
	* k5-config.h: bumped MAXPATHLEN and removed need for the kdb.h file.		

Fri May 26 10:17:12 1995 Keith Vetter (keithv@fusion.com)

	* adm_proto.h: added more missing INTERFACE.
	* los-proto.h: moved in prototype for gmt_mktime().

Thu May 25 19:27:45 1995 Keith Vetter (keithv@fusion.com)

	* adm_proto.h: two function's prototype were missing INTERFACE.
	* k5-config.h: kadm needs the kdb.h file.

Thu May 25 15:39:31 1995 Keith Vetter (keithv@fusion.com)

	* los-proto.h: moved in the prototype for krb5_make_fulladdr.

Tue May 23 15:33:00 1995  Theodore Y. Ts'o  (tytso@dcl)

	* k5-config.h, k5-sockets.h: Move the sockets specific setup out
		  of k5-config.h to k5-sockets.h, and modify k5-int to
		  include k5-sockets.h (if it is requested by
		  NEED_SOCKETS) after including krb5.h.  This keeps the
		  gdb type numbers the same across .o files, so that
		  recent binuntils can compress the debugging information
		  in executables linked with a debugging library.

Mon May 22 09:41:39 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in	- (install) Always perform install actions using
			  $(INSTALL_DATA).
	* configure.in	- Locate install program.
